chore: expand dataset CSV editor config; add deployment and server XMLs; update CI/CD and security scanning scripts; enhance BiasDetectionEngine and support context tests
- Add deployment.xml, sshConfigs.xml, and webServers.xml for server and deployment configuration
- Extend csv-editor.xml with additional dataset entries and separators
- Add bias.md with BiasDetectionEngine test fix plan
- Refactor .gitlab-ci.yml to simplify Docker registry login and connectivity checks
- Update azure-pipelines.yml for improved Node.js installation and cache directory handling
- Refine rollback.yml workflow for permissions, tag management, and step consistency
- Update security-scanning.yml to pin Checkov version and remove ambiguous baseline input
- Improve BiasDetectionEngine.test.ts with robust mock resets, alert level logic, and authentication failure handling
- Enhance BiasDashboard.test.ts and support-context-identifier.test.ts for more reliable API and context tests
- Refine objectives.ts and support-context-identifier.ts for improved empathy scoring and prompt escaping

Signed-off-by: Chad <chad@pixelatedempathy.com>

--- a/.github/workflows/azure-deployment.yml
+++ b/.github/workflows/azure-deployment.yml
@@ -150,11 +150,7 @@ jobs:
           az group create --name ${{ env.AZURE_RESOURCE_GROUP }} --location ${{ env.AZURE_LOCATION }}
 
       - name: Validate Bicep template
-        run: |
-          az deployment group validate \
-            --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
-            --template-file infra/main.bicep \
-            --parameters @infra/main.parameters.json
+        run: az deployment group validate --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --template-file infra/main.bicep --parameters @infra/main.parameters.json
 
       - name: Deploy Bicep template
         id: bicep
