Enhance bias detection with dependencies and scripts
- Add aif360, tf-keras, and textblob dependencies to pyproject.toml
- Include bias:py script in package.json and bias_py command in justfile
- Improve BiasDetectionService with better data handling and sentiment analysis fallback
- Update tests and add new Python service tests for better coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,9 @@ dependencies = [
   "gguf>=0.10.0",
   "ruff>=0.12.5",
   "yamllint>=1.37.1",
+  "aif360[infairness]>=0.6.1",
+  "tf-keras>=2.15.0",
+  "textblob>=0.19.0",
 ]
 
 [project.optional-dependencies]
