--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "22"
   },
   "scripts": {
+    "bias:py": "uv run --python 3.11 python src/lib/ai/bias-detection/python-service/bias_detection_service.py",
     "astro": "astro",
     "sync": "astro sync",
     "dev": "NODE_OPTIONS='--max-old-space-size=8192' astro dev",
