Refactor code structure for improved readability and maintainability

--- a/.github/workflows/security-scanning.yml
+++ b/.github/workflows/security-scanning.yml
@@ -1,4 +1,5 @@
 name: Security Scanning
+# Workflow updated to clear stale runner/config cache due to Checkov ambiguous flag errors
 
 permissions:
   contents: read
