--- a/.sourcery.yaml
+++ b/.sourcery.yaml
@@ -35,7 +35,8 @@ rule_settings:
     - refactoring
     - suggestion
     - comment
-  disable: [] # A list of rule IDs Sourcery will never suggest.
+  disable:
+    - dont-self-assign-variables  # Globally disables "Assigning a variable to itself has no effect" warnings.
   python_version: '3.11' # A string specifying the lowest Python version your project supports. Sourcery will not suggest refactorings requiring a higher Python version.
 
 # rules:  # A list of custom rules Sourcery will include in its analysis.
