Remove obsolete RocksDB and MinIO metadata files to clean up storage and improve system performance.

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,8 @@ instance/
 .webassets-cache
 
 .scrapy
+.claude-flow/
+volumes/
 
 # Ignore SARIF security scan results
 checkov-final-results.sarif/
