--- a/src/lib/ai/bias-detection/python-service/requirements.txt
+++ b/src/lib/ai/bias-detection/python-service/requirements.txt
@@ -58,6 +58,10 @@ flake8
 gunicorn
 gevent
 
+# Distributed task processing
+celery[redis]
+redis
+
 # Demographic analysis (optional)
 face-recognition
 
