--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -34,6 +34,30 @@ services:
       start_period: 10s
     restart: unless-stopped
 
+  pgbouncer:
+    image: edoburu/pgbouncer:1.18
+    container_name: pixelated-pgbouncer
+    ports:
+      - "6432:6432"
+    volumes:
+      - ./docker/postgres/pgbouncer/pgbouncer.ini:/etc/pgbouncer/pgbouncer.ini:ro
+      - ./docker/postgres/pgbouncer/userlist.txt:/etc/pgbouncer/userlist.txt:ro
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=pgbouncer
+      - POSTGRES_PASSWORD=pgbouncer_admin_password
+    depends_on:
+      postgres:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "pgbouncer", "-c", "/etc/pgbouncer/pgbouncer.ini", "-d"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+    restart: unless-stopped
+
 volumes:
   postgres_data:
     driver: local
