--- a/docker-compose.monitoring.yml
+++ b/docker-compose.monitoring.yml
@@ -22,6 +22,25 @@ services:
     networks:
       - pixelated-network
 
+  alertmanager:
+    image: prom/alertmanager:latest
+    container_name: pixelated-alertmanager
+    ports:
+      - "9093:9093"
+    volumes:
+      - ./docker/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml:ro
+      - alertmanager_data:/alertmanager
+    command:
+      - '--config.file=/etc/alertmanager/alertmanager.yml'
+      - '--storage.path=/alertmanager'
+      - '--web.listen-address=:9093'
+      - '--cluster.listen-address='
+    environment:
+      - SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL}
+    restart: unless-stopped
+    networks:
+      - pixelated-network
+
   # Secure alert receiver (no vulnerabilities)
   alert-receiver:
     build:
@@ -29,7 +48,7 @@ services:
       dockerfile: Dockerfile
     container_name: pixelated-alert-receiver
     ports:
-      - "9093:9093"
+      - "5001:5001"  # Changed from 9093 to avoid conflict with AlertManager
     environment:
       - SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL}
     restart: unless-stopped
@@ -64,9 +83,10 @@ services:
       - pixelated-network
 
 volumes:
-  prometheus_data:
-  grafana_data:
-  uptime_data:
+   prometheus_data:
+   grafana_data:
+   alertmanager_data:
+   uptime_data:
 
 networks:
   pixelated-network:
