--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,7 +58,8 @@
       {
         "name": "@astrojs/ts-plugin"
       }
-    ]
+    ],
+    "downlevelIteration": true
   },
   "include": [
     "src",
