--- a/mcp_agent.secrets.yaml
+++ b/mcp_agent.secrets.yaml
@@ -1,6 +1,6 @@
 openai:
   api_key: ""
-  base_url: "https://goat.pixelatedempathy.tech"
+  base_url: "https://goat.pixelatedempathy.tech/v1"
 
 
 anthropic:
