--- a/mcp_agent.config.yaml
+++ b/mcp_agent.config.yaml
@@ -95,6 +95,7 @@ openai:
   # Secrets (API keys, etc.) are stored in an mcp_agent.secrets.yaml file which can be gitignored
   #  default_model: "o3-mini"
   default_model: "hf.co/unsloth/Qwen3-Coder-30B-A3B-Instruct-GGUF:Q4_K_M"
+  base_url: "https://goat.pixelatedempathy.tech/v1"
 
 
 anthropic:
