Enhance deployment pipeline with improved CI/CD and security
- Update Node.js version from 22.x to 24.x across workflows and Dockerfiles
- Modify GitHub Actions workflows for better error handling and validation
- Add deployment scripts, backup management, and comprehensive tests
- Introduce specs and requirements for deployment pipeline improvements
- Update Azure Pipelines, GitLab CI, and package configurations for robustness
- Remove obsolete code quality workflow and add new security features

--- a/.github/workflows/azure-deployment.yml
+++ b/.github/workflows/azure-deployment.yml
@@ -16,7 +16,7 @@ on:
 
 
 env:
-  NODE_VERSION: 22.18.0
+  NODE_VERSION: 24.18.0
   PNPM_VERSION: 10.15.0
   AZURE_RESOURCE_GROUP: pixelated-rg
   AZURE_LOCATION: eastus
@@ -148,7 +148,19 @@ jobs:
           az group create --name ${{ env.AZURE_RESOURCE_GROUP }} --location ${{ env.AZURE_LOCATION }}
 
       - name: Validate Bicep template
-        run: az deployment group validate --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --template-file infra/main.bicep --parameters @infra/main.parameters.json
+        run: |
+          az deployment group validate \
+            --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
+            --template-file infra/main.bicep \
+            --parameters @infra/main.parameters.json \
+            1> $GITHUB_WORKSPACE/bicep-validate-stdout.log \
+            2> $GITHUB_WORKSPACE/bicep-validate-stderr.log || {
+                echo "Validation failed. STDOUT:"
+                cat $GITHUB_WORKSPACE/bicep-validate-stdout.log
+                echo "STDERR:"
+                cat $GITHUB_WORKSPACE/bicep-validate-stderr.log
+                exit 1
+            }
 
       - name: Deploy Bicep template
         id: bicep
