--- a/.github/workflows/dependency-scan.yml
+++ b/.github/workflows/dependency-scan.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '22'
+        node-version: '24'
         cache: 'pnpm'
 
     - name: Install dependencies
@@ -48,8 +48,8 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install uv
-      run: pip install 'uv>=0.8.6'
+    - name: Install uv (force latest)
+      run: pip install --upgrade 'uv>=0.8.6'
 
     - name: Create virtual environment
       run: uv venv
@@ -60,5 +60,6 @@ jobs:
     - name: Install pip-audit in venv
       run: uv pip install --upgrade pip pip-audit
 
-    - name: Run pip-audit
-      run: uv run pip-audit --format=columns
+    # Run pip-audit, excluding local editable package to avoid false negative on 'pixelated'
+    - name: Run pip-audit (skip editable/local package)
+      run: uv run pip-audit --skip-editable --format=columns
