--- a/package.json
+++ b/package.json
@@ -455,7 +455,8 @@
       "querystring": "^0.2.1",
       "tmp": "^0.2.4",
       "undici@<5.29.0": ">=5.29.0",
-      "tar-fs@>=2.0.0 <2.1.3": ">=2.1.3"
+      "tar-fs@>=2.0.0 <2.1.3": ">=2.1.3",
+      "@grpc/grpc-js": ">=1.8.22"
     },
     "allowedDeprecatedVersions": {
       "abab": "2.0.6",
