Add @iconify/types dependency and fix code formatting
- Added @iconify/types to package.json for improved type safety in icon handling
- Updated pnpm-lock.yaml to reflect the new dependency
- Reformatted BiasDetectionEngine.test.ts and uno.config.ts for consistency (e.g., semicolons, indentation, line breaks)

--- a/package.json
+++ b/package.json
@@ -284,6 +284,7 @@
     "@iconify-json/ri": "^1.2.5",
     "@iconify-json/uil": "^1.2.3",
     "@iconify/json": "^2.2.360",
+    "@iconify/types": "^2.0.0",
     "@keystatic/astro": "^5.0.6",
     "@playwright/test": "1.52.0",
     "@testing-library/dom": "10.4.0",
