--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,6 +88,19 @@ stages:
         pnpm install --frozen-lockfile --prefer-offline
       displayName: Install dependencies
 
+    - script: |
+        # Install Node.js 24.x in container using nvm (no sudo)
+        set -e
+        export NVM_DIR="$HOME/.nvm"
+        mkdir -p $NVM_DIR
+        curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+        . $NVM_DIR/nvm.sh
+        nvm install 24
+        nvm use 24
+        node --version
+        which node
+        echo "Node.js installation complete."
+      displayName: "Install Node.js 24.x in container (pre-build)"
 
     - script: |
         set -eu
