Refactor constructors to remove return type annotations in various classes
- Updated constructors in multiple classes across the codebase to remove the explicit return type of `void`, aligning with TypeScript conventions.
- Adjusted method signatures in several services and middleware to improve type inference and maintain consistency.
- Enhanced readability by ensuring constructors are defined without unnecessary return types.

--- a/package.json
+++ b/package.json
@@ -152,10 +152,12 @@
     "@aws-sdk/lib-dynamodb": "^3.848.0",
     "@aws-sdk/util-dynamodb": "^3.848.0",
     "@axe-core/react": "^4.10.2",
+    "@azure/storage-blob": "^12.28.0",
     "@clerk/astro": "^2.10.8",
     "@dwmkerr/terminal-ai": "^0.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@google-cloud/storage": "^7.17.0",
     "@google/genai": "^1.10.0",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
