feat: Enhance Crisis Detection and FHE Demo Components
- Added type safety to CrisisDetectionDemo by introducing DetectCrisisResult interface.
- Refactored CrisisDetectionDemo to improve property access and reduce type assertions.
- Updated FHEDemo to use FC type for better readability.
- Cleaned up imports in SessionAnalysis and adjusted EmotionTrackingChart usage.
- Improved useChatWithMemory hook to include memory persistence and loading state.
- Enhanced RedisStorageAPI with better error handling and type safety.
- Updated NotificationService to ensure type safety with Redis commands.
- Introduced new API types for DetectCrisisResult to standardize crisis detection responses.
- Added global React type aliases to simplify component type definitions.
- Improved performance optimizer and uptime monitor with better type handling and error management.
- Added tsconfig.scope.json for scoped type checking in specific directories.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,8 @@
       "@types/*": ["src/types/*"],
       "@testing/*": ["./tests/*"],
 
-      "@/types": ["src/types"]
+  "@/types": ["src/types"],
+  "@/types/*": ["src/types/*"]
     },
     "skipLibCheck": true,
     "disableSourceOfProjectReferenceRedirect": true,
